syntax = "proto3";
option go_package = "github.com/biaferre/gprc-sensor-server/sensor";

message SensorRequest {
    string request_message = 1;
}

message SensorResponse {
    string sensor_id = 1;
    float avg_temp = 2;
    float max_temp = 3;
    float min_temp = 4;
    string err = 5;
}

service Sensor {
    rpc GetSensorData(SensorRequest) returns (SensorResponse);
}
